code/buildingblocks/06_ingress/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: httpd
  name: backend-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    provides: backend
  sessionAffinity: None
  type: ClusterIP
