code/buildingblocks/06_ingress/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: frontend-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    provides: frontend
  sessionAffinity: None
  type: ClusterIP
