code/buildingblocks/06_ingress/frontend-backend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-backend-ingress
spec:
  rules:
  - host: frontend.my.service
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
  - host: backend.my.service
    http:
      paths:
      - backend:
          serviceName: backend
          servicePort: 80
