code/buildingblocks/06_ingress/ingress_tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  tls:
  - hosts:
    - sslexample.my.service
    secretName: testcert
  rules:
    - host: sslexample.my.service
      http:
        paths:
        - path: /
          backend:
            serviceName: service1
            servicePort: 80
